# deer-and-plow

./: .mise.toml  README.md  deer-and-plow.ipynb  pyproject.toml
