[project]
name = "plow-and-deer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bryan Weber", email = "bweber@rebelliondefense.com"},
]
dependencies = [
    "jupyterlab>=4.0.10",
    "numpy>=1.26.3",
    "scipy>=1.11.4",
    "pint>=0.23",
    "matplotlib>=3.8.2",
    "ipympl>=0.9.3",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
package-type = "application"
